syntax = "proto3";

package org.akkacqrs.proto;

message UUID {
    string value = 1;
}

message Timestamp {
    int64 epochSecond = 1;
    int32 nano        = 2;
}

message IssueCreated {
    UUID      id          = 1;
    string    summary     = 2;
    string    description = 3;
    Timestamp date        = 4;
    string    issueStatus = 5;
}

message IssueUpdated {
    UUID      id          = 1;
    string    summary     = 2;
    string    description = 3;
    Timestamp date        = 4;
}

message IssueClosed {
    UUID      id   = 1;
    Timestamp date = 2;
}

message IssueDeleted {
    UUID      id   = 1;
    Timestamp date = 2;
}